--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,10 @@ indexmap = "1.0.2"
 libloading = { version = "0.6.0", optional = true }
 smallvec = "1.6.1"
 
+cranelift-llvm = { path = "./cranelift-llvm" }
+
+[workspace]
+
 # Uncomment to use local checkout of cranelift
 #[patch."https://github.com/bytecodealliance/wasmtime.git"]
 #cranelift-codegen = { path = "../wasmtime/cranelift/codegen" }
